--- a/react-basic-setup/1.2.md
+++ b/react-basic-setup/1.2.md
@@ -46,7 +46,7 @@ More will be said about JSX in the JSX chapter. For now, just realize that JSX i
 
 ## Transforming JSX via Babel in the browser
 
-Normally, Babel is setup to automatically process your JavaScript files during development using the Babel CLI tool, webpack, or SystemJS. And this is the correct way to use React during development. However, it is possible to use Babel directly in the browser by way of a script include. And since we are just getting started we'll avoid CLI tools or learning a module loader in order to learn React.
+Normally, Babel is setup to automatically process your JavaScript files during development using the Babel CLI tool (e.g. via webpack). And this is the correct way to use React during development. However, it is possible to use Babel directly in the browser by way of a script include. And since we are just getting started we'll avoid CLI tools or learning a module loader in order to learn React.
 
 The Babel project unfortunately, as of Babel 6, no longer provides the script file needed (i.e `browser.js`) to transform JSX code to ES5 code in the browser. Thus you will have to use an older version of Babel (i.e. 5.8.23) that does provide this needed file (i.e `browser.js`) for transforming JSX/ES* in the browser.
 
@@ -89,5 +89,3 @@ You should be aware that the code examples used in this book via JSFiddle will b
     * JSX promotes the idea of inline styles. Which can be a good thing.
 * Beware of JSX [Gotchas](http://facebook.github.io/react/docs/jsx-gotchas.html).
 * A [JSX specification is currently being drafted](https://facebook.github.io/jsx/) to by used by anyone as an a XML-like syntax extension to ECMAScript without any defined semantics.
-
-
