--- a/react-jsx/3.4.md
+++ b/react-jsx/3.4.md
@@ -1,6 +1,6 @@
 # Using JavaScript expressions in JSX
 
-Hopefully by now it's obvious that JSX is just syntactical sugar that gets converted to real JavaScript. But what happens when you want to intermingle real JavaScript code within JSX? To write a JavaScript expression inline with JSX you will have to surround the JavaScript code in `{ }` brackets. 
+Hopefully by now it's obvious that JSX is just syntactical sugar that gets converted to real JavaScript. But what happens when you want to intermingle real JavaScript code within JSX? To write a JavaScript expression inline with JSX you will have to surround the JavaScript code in `{ }` brackets.
 
 In the React/JSX code below I am mixing JavaScript expressions (e.g. `2+2`), surround by `{ }` among the JSX that will eventually get evaluated by a JavaScript engine.
 
@@ -31,13 +31,4 @@ Once this code is parsed by a JavaScript engine (i.e. a browser) the JavaScript 
 </div>
 ```
 
-Nothing that complicated is going on here once you realize that the brackets basically escape the JSX. The `{ }` brackets simply tells JSX that the content is JavaScript so leave it alone so it can eventually be parsed by a JavaScript engine.
-
-
-
-
-
-
-
-
-
+Nothing that complicated is going on here once you realize that the brackets basically escape the JSX. The `{ }` brackets simply tells JSX that the content is JavaScript so leave it alone so it can eventually be parsed by a JavaScript engine (e.g. `2+2`). Note that `{ }` brackets can be used anywhere among the JSX expressions as long as the result is valid JavaScript.
