--- a/react-jsx/3.7.md
+++ b/react-jsx/3.7.md
@@ -1,13 +1,35 @@
 # Defining attributes/props in JSX
 
+In the chapter X.X I discussed passing `React.createElement(type, props, children)` attributes/props when defining React nodes. Since JSX is transformed into `React.createElement()` function calls you already have a base understanding of how attributes/props work. Except that since you are not directly writing the functions calls when writing JSX you instead express attributes/props in JSX by adding the attributes/props to JSX expressions as name-value attributes.
 
+In the code example below I am defining a React `<li>` element node with five attributes/props. One is a non-standard HTML attribute (e.g. `foo:'bar'`) and the others are known HTML attributes.
+
+```js
+var styles = {backgroundColor:'red'};
+
+var reactNodeLi =  <li id="li1" data-test="test" className="blue" aria-test="test" style={styles} foo="bar">text</li>;
+
+ReactDOM.render(reactNodeLi, document.getElementById('app1'));
+```
+
+When the above code is render to the DOM it will look like this:
+
+```HTML
+<div id="app1">
+    <li id="li1" data-test="test" class="blue" aria-test="test" style="background-color:red;" data-reactid=".0">text</li>
+</div>
+```
+
+## Omitting the value of an attribute/prop causes JSX to treat it as true. To pass false an attribute expression must be used. This often comes up when using HTML form elements, with attributes like disabled, required, checked and readOnly.
 
 #### Notes
 
+* If an attribute/prop is duplicated the last one defined wins.
 * If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them. However, if you use a custom element (i.e. not a stand HTML element) then arbitrary/custom attributes will be added to custom elements (e.g. `<x-my-component custom-attribute="foo" />`).
+* Omitting the value of an attribute/prop causes JSX to treat it as true (i.e. `<input checked id type="checkbox" />` becomes `<input checked="true" id="true" type="checkbox">`). This will even occur for attributes/props that are not presented in the final HTML due to the fact they are not actual HTML attributes.
 * The `class` attribute has to be written `className`
 * The `for` attribute has to be written `htmlFor`
-* The `style` attribute takes an object of [camel-cased style properties](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-CSS2Properties)
+* The `style` attribute takes a reference to an object of [camel-cased style properties](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-CSS2Properties)
 * HTML form elements (e.g. `<input></input>`, `<textarea></textarea>` etc...) created [as React nodes](https://facebook.github.io/react/docs/forms.html) support a few attributes/props that are affected by user interaction. These are: `value`, `checked`, and `selected`.
 * React offers the [`key`](https://facebook.github.io/react/docs/multiple-components.html#dynamic-children), [`ref`](https://facebook.github.io/react/docs/more-about-refs.html), and [`dangerouslySetInnerHTML`](https://facebook.github.io/react/tips/dangerously-set-inner-html.html) attributes/props that don't exist in DOM and take on a unique role/function.
 * All attributes are camel-cased (e.g. `accept-charset` is written as `acceptCharset`) which differs from how they are written in HTML.
