--- a/react-nodes/2.4.md
+++ b/react-nodes/2.4.md
@@ -10,25 +10,30 @@ Props take on several roles:
 
 In one sense you can think of props as the configuration options for React nodes and in another sense you can think of them as HTML attributes.
 
-In the code example below I am defining a React `<li>` element node with four props. One is a non-standard HTML attribute and value (e.g. `foo:'bar'`) and the others are known HTML attributes.
+In the code example below I am defining a React `<li>` element node with five props. One is a non-standard HTML attribute (i.e. `foo:'bar'`) and the others are known HTML attributes.
 
 ```js
 var reactNodeLi = React.createElement('li',
 {
     foo:'bar',
     id:'li1',
+    //note use of JS class property representing class attribute below
+    //i.e. className
+    className:'blue',
     'data-test':'test',
     'aria-test':'test',
-    //note this is object of camel-cased style properties, not a string
+    //note use of JS camel-cased CSS property below
+    //i.e. backgroundColor
     style:{backgroundColor:'red'}
-}
+},
+'text'
 );
 ```
 
 When the above code is rendered to an HTML page the actual HTML created will look like:
 
 ```html
-<li id="li1" data-test="test" aria-test="test" style="background-color:red;" data-reactid=".0"></li>
+<li id="li1" data-test="test" class="blue" aria-test="test" style="background-color:red;" data-reactid=".0">text</li>
 ```
 
 What you need to realize is only [standard HTML attributes](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes), `data-*`, and `aria-*` get passed to the real DOM from the Virtual DOM.
@@ -42,7 +47,7 @@ React attributes/props not only translate to real HTML attributes props but as p
 * If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them. However, if you use a custom element (i.e. not a stand HTML element) then arbitrary/custom attributes will be added to custom elements (e.g. `<x-my-component custom-attribute="foo" />`).
 * The `class` attribute has to be written `className`
 * The `for` attribute has to be written `htmlFor`
-* The `style` attribute takes an object of [camel-cased style properties](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-CSS2Properties)
+* The `style` attribute takes a reference to an object of [camel-cased style properties](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-CSS2Properties)
 * HTML form elements (e.g. `<input></input>`, `<textarea></textarea>` etc...) created [as React nodes](https://facebook.github.io/react/docs/forms.html) support a few attributes/props that are affected by user interaction. These are: `value`, `checked`, and `selected`.
 * React offers the [`key`](https://facebook.github.io/react/docs/multiple-components.html#dynamic-children), [`ref`](https://facebook.github.io/react/docs/more-about-refs.html), and [`dangerouslySetInnerHTML`](https://facebook.github.io/react/tips/dangerously-set-inner-html.html) attributes/props that don't exist in DOM and take on a unique role/function.
 * All attributes are camel-cased (e.g. `accept-charset` is written as `acceptCharset`) which differs from how they are written in HTML.
