--- a/react-jsx/3.7.md
+++ b/react-jsx/3.7.md
@@ -1,13 +1,15 @@
 # Defining attributes/props in JSX
 
-In the chapter X.X I discussed passing `React.createElement(type, props, children)` attributes/props when defining React nodes. Since JSX is transformed into `React.createElement()` function calls you already have a base understanding of how attributes/props work. Except that since you are not directly writing the functions calls when writing JSX you instead express attributes/props in JSX by adding the attributes/props to JSX expressions as name-value attributes.
+In the chapter X.X I discussed passing `React.createElement(type, props, children)` attributes/props when defining React nodes. Since JSX is transformed into `React.createElement()` function calls you already have a base understanding of how React node attributes/props work.
 
-In the code example below I am defining a React `<li>` element node with five attributes/props. One is a non-standard HTML attribute (e.g. `foo:'bar'`) and the others are known HTML attributes.
+However, when using JSX you write attribute/props by adding the attributes/props to JSX expressions as name-value attributes.
+
+In the code example below I am defining a React `<li>` element node, using JSX, with five attributes/props. One is a non-standard HTML attribute (e.g. `foo:'bar'`) and the others are known HTML attributes.
 
 ```js
 var styles = {backgroundColor:'red'};
 
-var reactNodeLi =  <li id="li1" data-test="test" className="blue" aria-test="test" style={styles} foo="bar">text</li>;
+var reactNodeLi =  <li id="" data-test="test" className="blue" aria-test="test" style={styles} foo="bar" test>text</li>;
 
 ReactDOM.render(reactNodeLi, document.getElementById('app1'));
 ```
@@ -16,9 +18,15 @@ When the above code is render to the DOM it will look like this:
 
 ```HTML
 <div id="app1">
-    <li id="li1" data-test="test" class="blue" aria-test="test" style="background-color:red;" data-reactid=".0">text</li>
+    <li id="true" data-test="test" class="blue" aria-test="test" style="background-color:red;" test="true" data-reactid=".0">text</li>
 </div>
 ```
+
+You should note the following three things:
+
+1. Leaving an attribute/prop blank results in that attribute value becoming true (e.g. `id=""` becomes `id="true"` and `test` becomes `test="true"`)
+2. The foo attribute, because it was not a stand HTML attribute does become a final HTML attribute, but it is still available on the node from JavaScript (i.e. `this.props.foo`)
+3. You can't write inlines styles in JSX. You have to reference an object in scope that contains CSS properties (written as JS properties).
 
 ## Omitting the value of an attribute/prop causes JSX to treat it as true. To pass false an attribute expression must be used. This often comes up when using HTML form elements, with attributes like disabled, required, checked and readOnly.
 
