--- a/react-jsx/3.7.md
+++ b/react-jsx/3.7.md
@@ -8,8 +8,10 @@ In the code example below I am defining a React `<li>` element node, using JSX, 
 
 ```js
 var styles = {backgroundColor:'red'};
+var tested = true;
+var text = 'text';
 
-var reactNodeLi =  <li id="" data-test="test" className="blue" aria-test="test" style={styles} foo="bar" test>text</li>;
+var reactNodeLi =  <li id="" data-test={tested?'test':'false'} className="blue" aria-test="test" style={styles} foo="bar" test={text}</li>;
 
 ReactDOM.render(reactNodeLi, document.getElementById('app1'));
 ```
@@ -27,6 +29,7 @@ You should note the following three things:
 1. Leaving an attribute/prop blank results in that attribute value becoming true (e.g. `id=""` becomes `id="true"` and `test` becomes `test="true"`)
 2. The foo attribute, because it was not a stand HTML attribute does become a final HTML attribute, but it is still available on the node from JavaScript (i.e. `this.props.foo`)
 3. You can't write inlines styles in JSX. You have to reference an object in scope that contains CSS properties (written as JS properties).
+4. Any JavaScript values can be injected into JSX using `{}` (e.g. `test={text}` and `data-test={tested?'test':'false'}`).
 
 #### Notes
 
