--- a/react-jsx/3.7.md
+++ b/react-jsx/3.7.md
@@ -1,8 +1,6 @@
 # Defining attributes/props in JSX
 
-In the chapter X.X I discussed passing `React.createElement(type, props, children)` attributes/props when defining React nodes. Since JSX is transformed into `React.createElement()` function calls you already have a base understanding of how React node attributes/props work.
-
-However, when using JSX you write attribute/props by adding the attributes/props to JSX expressions as name-value attributes.
+In the previous chapter, section X.X, I discussed passing `React.createElement(type, props, children)` attributes/props when defining React nodes. Since JSX is transformed into `React.createElement()` function calls you basically already have a understanding of how React node attributes/props work. However, since JSX is used to express XML-like nodes, that get turned into HTML, attribute/props are defined by adding the attributes/props to JSX expressions as name-value attributes.
 
 In the code example below I am defining a React `<li>` element node, using JSX, with five attributes/props. One is a non-standard HTML attribute (e.g. `foo:'bar'`) and the others are known HTML attributes.
 
@@ -11,7 +9,7 @@ var styles = {backgroundColor:'red'};
 var tested = true;
 var text = 'text';
 
-var reactNodeLi =  <li id="" data-test={tested?'test':'false'} className="blue" aria-test="test" style={styles} foo="bar" test={text}</li>;
+var reactNodeLi =  <li id="" data-test={tested?'test':'false'} className="blue" aria-test="test" style={styles} foo="bar">{text}</li>;
 
 ReactDOM.render(reactNodeLi, document.getElementById('app1'));
 ```
@@ -20,7 +18,7 @@ When the above code is render to the DOM it will look like this:
 
 ```HTML
 <div id="app1">
-    <li id="true" data-test="test" class="blue" aria-test="test" style="background-color:red;" test="true" data-reactid=".0">text</li>
+    <li id="true" data-test="test" class="blue" aria-test="test" style="background-color:red;" data-reactid=".0">text</li>
 </div>
 ```
 
