--- a/react-jsx/3.7.md
+++ b/react-jsx/3.7.md
@@ -9,7 +9,14 @@ var styles = {backgroundColor:'red'};
 var tested = true;
 var text = 'text';
 
-var reactNodeLi =  <li id="" data-test={tested?'test':'false'} className="blue" aria-test="test" style={styles} foo="bar">{text}</li>;
+var reactNodeLi = <li id=""
+                      data-test={tested?'test':'false'}
+                      className="blue"
+                      aria-test="test"
+                      style={styles}
+                      foo="bar">
+                          {text}
+                  </li>;
 
 ReactDOM.render(reactNodeLi, document.getElementById('app1'));
 ```
@@ -18,11 +25,18 @@ When the above code is render to the DOM it will look like this:
 
 ```HTML
 <div id="app1">
-    <li id="true" data-test="test" class="blue" aria-test="test" style="background-color:red;" data-reactid=".0">text</li>
+    <li id="true"
+        data-test="test"
+        class="blue"
+        aria-test="test"
+        style="background-color:red;"
+        data-reactid=".0">
+            text
+    </li>
 </div>
 ```
 
-You should note the following three things:
+You should note the following four things:
 
 1. Leaving an attribute/prop blank results in that attribute value becoming true (e.g. `id=""` becomes `id="true"` and `test` becomes `test="true"`)
 2. The foo attribute, because it was not a stand HTML attribute does become a final HTML attribute, but it is still available on the node from JavaScript (i.e. `this.props.foo`)
