--- a/react-basic-setup/1.3.md
+++ b/react-basic-setup/1.3.md
@@ -17,8 +17,8 @@ In the HTML page below the familiar `HelloMessage` component has been re-written
 <body>
     <div id="app"></div>
     <script type="text/babel">
-    
-        class HelloMessage extends React.Component {
+
+        class HelloMessage extends React.Component { //notice use of React.Component
             render(){
                 return <div>Hello {this.props.name}</div>;
             }
