--- a/react-jsx/3.3.md
+++ b/react-jsx/3.3.md
@@ -1,10 +1,12 @@
 # Rendering JSX to DOM
 
-React provides the `ReactDOM.render()` function that can be used to render JSX to the DOM. In the code example below I render the HTML `<li>` element and the `<foo-bar>` custom element defined using JSX to the DOM
+The `ReactDOM.render()` function can be used to render JSX expressions to the DOM. Actually, after Babel transforms the JSX all it is doing is rendering nodes created by `React.createElement()`.  Again, JSX is just a stand in experssion for having to write out the `React.createElement()` function calls.
+
+In the code example I am rendering a `<li>` element and a custom `<foo-bar>` element to the DOM using JSX expressions.
 
 [source code](https://jsfiddle.net/e1thfjro/#tabs=js,result,html,resources)
 
-Once rendered to the DOM, the updated HTML will look like so:
+Once rendered to the DOM, the HTML will look like so:
 
 ```html
 <body>
