--- a/react-jsx/3.4.md
+++ b/react-jsx/3.4.md
@@ -1,8 +1,8 @@
 # Using JavaScript expressions in JSX
 
-Hopefully by now it's obvious that JSX is just syntactical sugar that gets converted to real JavaScript. But what happens when you want to intermingle real JavaScript code within JSX? To write a JavaScript expression inline with JSX you will have to surround the JavaScript code in `{ }` brackets.
+Hopefully by now it's obvious that JSX is just syntactical sugar that gets converted to real JavaScript. But what happens when you want to intermingle real JavaScript code within JSX? To write a JavaScript expression within JSX you will have to surround the JavaScript code in `{ }` brackets.
 
-In the React/JSX code below I am mixing JavaScript expressions (e.g. `2+2`), surround by `{ }` among the JSX that will eventually get evaluated by a JavaScript engine.
+In the React/JSX code below I am mixing JavaScript expressions (e.g. `2+2`), surround by `{ }` among the JSX that will eventually get evaluated by JavaScript.
 
 [source code](https://jsfiddle.net/9x24jp95/#tabs=js,result,html,resources)
 
@@ -23,7 +23,7 @@ var reactNode = React.createElement(
 ReactDOM.render(reactNode, document.getElementById('app1'));
 ```
 
-Once this code is parsed by a JavaScript engine (i.e. a browser) the JavaScript expression are evaluated and the resulting HTML will look like so:
+Once this code is parsed by a JavaScript engine (i.e. a browser) the JavaScript expressions are evaluated and the resulting HTML will look like so:
 
 ```html
 <div id="app1">
