--- a/react-jsx/3.6.md
+++ b/react-jsx/3.6.md
@@ -1,4 +1,4 @@
- # Using inline CSS styles in JSX
+ # Using inline CSS in JSX
 
 In order to define inline styles on React nodes you need to pass the `style` prop/attribute a reference to a JavaScript object containing CSS properties and values.
 
