--- a/react-nodes/2.3.md
+++ b/react-nodes/2.3.md
@@ -1,6 +1,6 @@
 # Rendering to DOM
 
-React provides the `ReactDOM.render()` function that can be used to render React nodes to the DOM. In the code example below I render the `'li'` and `'foo-bar'` React nodes to the DOM
+React provides the `ReactDOM.render()` function, which we've already seen in use in this chapter, that can be used to render React nodes to the DOM. In the code example below I render the `'<li>'` and `'<foo-bar>'` React nodes to the DOM
 
 [source code](https://jsfiddle.net/LLz4p3ox/#tabs=js,result,html,resources)
 
@@ -12,6 +12,8 @@ Once rendered to the DOM, the updated HTML will look like so:
     <div id="app2"><foo-bar classname="bar" children="foo" data-reactid=".1">foo</foo-bar></div>
 </body>
 ```
+
+The `ReactDOM.render()` function is how you get the React nodes from JavaScript to the HTML DOM.
 
 #### Notes
 
