--- a/react-jsx/3.1.md
+++ b/react-jsx/3.1.md
@@ -2,7 +2,7 @@
 
 JSX is an XML/HTML-like syntax used by React that extends ECMAScript so that XML/HTML-like text can co-exist with JavaScript/React code. The syntax is intended to be used by preprocessors (i.e. transpilers like Babel) to transform HTML-like text found in JavaScript files into standard JavaScript objects that a JavaScript engine will parse.
 
-Basically, by using JSX you can write concise HTML structures (DOM like tree structures) in the same file as you write JavaScript code, then Babel will transform these expressions into actual JavaScript code. Unlike the past, instead of putting JavaScript into HTML, JSX allows us to put HTML into JavaScript.
+Basically, by using JSX you can write concise HTML/XML-like structures (e.g. DOM like tree structures) in the same file as you write JavaScript code, then Babel will transform these expressions into actual JavaScript code. Unlike the past, instead of putting JavaScript into HTML, JSX allows us to put HTML into JavaScript.
 
 By using JSX one can write the following JSX/JavaScript code:
 
