--- a/react-nodes/2.2.md
+++ b/react-nodes/2.2.md
@@ -10,7 +10,7 @@ Below I use the `React.createElement()` function to create a virtual DOM represe
 var reactNodeLi = React.createElement('li', {id:'li1'}, 'one');
 ```
 
-Notice that the first argument defines which HTML element I want to represent. The second argument defines the attributes/props on the `<li>`.  And, the third argument defines what the node inside of the element will be. In this case, I am simply place a child text node (i.e. `'one'`) inside of the `<li>`.
+Notice that the first argument defines which HTML element I want to represent. The second argument defines the attributes/props on the `<li>`.  And, the third argument defines what the node inside of the element will be. In this case, I am simply place a child text node (i.e. `'one'`) inside of the `<li>`. Note that, the last argument, that becomes a child of the node being created can be a React text node, a React element node, or even React component.
 
 At this point all I've done is create a React element node containing a React text node that I have stored into the variable `reactNodeLi`. To create a virtual DOM next we have to actually render the React element node to a real DOM. To do this we use the `ReactDOM.render()` function.
 
@@ -79,7 +79,7 @@ You can investigate this yourself using the JSFiddle below:
 
 [source code](https://jsfiddle.net/bLy9Lu47/#tabs=js,result,html,resources)
 
-It should be obvious that React nodes are just JavaScript objects that represent real DOM element nodes and text nodes inside of a virtual DOM. The virtual DOM is then used to construct an actual DOM branch in HTML pages.
+It should be obvious that React nodes are just JavaScript objects in a tree that represent real DOM nodes inside of a virtual DOM tree. The virtual DOM is then used to construct an actual DOM branch in an HTML page.
 
 #### Notes
 
