--- a/react-nodes/2.5.md
+++ b/react-nodes/2.5.md
@@ -1,28 +1,37 @@
-# Using element factories
+# Inlining CSS on element nodes
 
-React provides built-in shortcuts for creating commonly used element nodes. These shortcuts are called React element factories.
+To apply inline CSS to a React node you have to pass a `style` attribute/prop with an object value containing CSS properties and values.
 
-Using a factory, the React element node `<li>one</li>` can be created like so:
-
-```js
-// uses React.DOM.li(props, children);
-var reactNodeLi = React.DOM.li({id:'li1'}, 'one');
-```
-
-instead of using:
-
-```js
-// uses React.createElement(type, prop, children)
-var reactNodeLi = React.createElement('li', null, 'one');
-```
-
-Below I list out all of the built in node factories:
+For example, in the code below I am passing a `style` prop referencing (i.e. `inlineStyle`)  to an object containing CSS properties and values:
 
 ```
-a,abbr,address,area,article,aside,audio,b,base,bdi,bdo,big,blockquote,body,br,button,canvas,caption,cite,code,col,colgroup,data,datalist,dd,del,details,dfn,dialog,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,head,header,hgroup,hr,html,i,iframe,img,input,ins,kbd,keygen,label,legend,li,link,main,map,mark,menu,menuitem,meta,meter,nav,noscript,object,ol,optgroup,option,output,p,param,picture,pre,progress,q,rp,rt,ruby,s,samp,script,section,select,small,source,span,strong,style,sub,summary,sup,table,tbody,td,textarea,tfoot,th,thead,time,title,tr,track,u,ul,var,video,wbr,circle,clipPath,defs,ellipse,g,image,line,linearGradient,mask,path,pattern,polygon,polyline,radialGradient,rect,stop,svg,text,tspa
+var inlineStyles = {backgroundColor:'red', fontSize:20};
+
+var reactNodeLi =  React.createElement('div',{style:inlineStyles}, 'styled')
+
+ReactDOM.render(reactNodeLi, document.getElementById('app1'));
 ```
+
+The resulting HTML will look like so:
+
+```
+<div id="app1">
+  <div style="background-color:red;font-size:20px;" data-reactid=".0">styled</div>
+</div>
+```
+
+You need to notice two things:
+
+1. I didn't have to add the "px" to the `fontSize` value because React did it for me.
+2. When writing CSS properties in JavaScript one has to use the [camelCased version of the CSS property](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-ElementCSSInlineStyle) (e.g. `backgroundColor` not `background-color`). 
 
 #### Notes
 
-* If you are using JSX you have no need for factories
-* You can build your [own custom factories](http://facebook.github.io/react/docs/top-level-api.html#react.createfactory) using `React.createFactory(type)`.
+* Vendor prefixes other than ms should begin with a capital letter. This is why WebkitTransition has an uppercase "W".
+* CamelCased CSS properties shouldn't be a surprise given this is how it is done when accessing properties on DOM nodes from JS (e.g. `document.body.style.backgroundImage`)
+* When specifying a pixel value React will automatically append the string "px" for you after your number value except for the following properties:
+
+```html
+columnCount fillOpacity flex flexGrow flexShrink fontWeight lineClamp lineHeight
+opacity order orphans strokeOpacity widows zIndex zoom
+```
