--- a/react-nodes/2.5.md
+++ b/react-nodes/2.5.md
@@ -4,7 +4,7 @@ To apply inline CSS to a React node you have to pass a `style` attribute/prop wi
 
 For example, in the code below I am passing a `style` prop referencing (i.e. `inlineStyle`)  to an object containing CSS properties and values:
 
-```
+```js
 var inlineStyles = {backgroundColor:'red', fontSize:20};
 
 var reactNodeLi =  React.createElement('div',{style:inlineStyles}, 'styled')
@@ -14,16 +14,16 @@ ReactDOM.render(reactNodeLi, document.getElementById('app1'));
 
 The resulting HTML will look like so:
 
-```
+```html
 <div id="app1">
   <div style="background-color:red;font-size:20px;" data-reactid=".0">styled</div>
 </div>
 ```
 
-You need to notice two things:
+Note two things in the JavaScript code above:
 
 1. I didn't have to add the "px" to the `fontSize` value because React did it for me.
-2. When writing CSS properties in JavaScript one has to use the [camelCased version of the CSS property](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-ElementCSSInlineStyle) (e.g. `backgroundColor` not `background-color`). 
+2. When writing CSS properties in JavaScript one has to use the [camelCased version of the CSS property](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-ElementCSSInlineStyle) (e.g. `backgroundColor` not `background-color`).
 
 #### Notes
 
