--- a/react-jsx/3.6.md
+++ b/react-jsx/3.6.md
@@ -6,7 +6,7 @@ In the code below I first setup a JavaScript object, named `styles`, containing 
 
 [source code](https://jsfiddle.net/4pw9w9h7/#tabs=js,result,html,resources)
 
-Notice that, the CSS properties are in a camelCased form [similar to what is used when writing CSS in JavaScript due to the fact that JavaScript does not allow hyphens in names](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Properties_Reference).
+Notice that, the CSS properties are in a camelCased form similar to what is used when writing [CSS in JavaScript](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Properties_Reference). This is required because JavaScript does not allow hyphens in names.
 
 When the above React/JSX code is transformed by Babel, and then parsed by a JavaScript engine, the resulting HTML will be:
 
