--- a/react-nodes/2.5.md
+++ b/react-nodes/2.5.md
@@ -2,7 +2,7 @@
 
 To apply inline CSS to a React node you have to pass a `style` attribute/prop with an object value containing CSS properties and values.
 
-For example, in the code below I am passing a `style` prop referencing (i.e. `inlineStyle`)  to an object containing CSS properties and values:
+For example, in the code below I am passing a `style` prop referencing (i.e. `inlineStyle`) an object containing CSS properties and values:
 
 ```js
 var inlineStyles = {backgroundColor:'red', fontSize:20};
