--- a/react-nodes/2.2.md
+++ b/react-nodes/2.2.md
@@ -2,7 +2,13 @@
 
 In most cases developers using React will favor JSX and use it to create React nodes. Regardless of this fact in this chapter we are going to examine how React nodes can be created without JSX, using only JavaScript. The next chapter will discuss creating React nodes using JSX.
 
-Creating React nodes using JavaScript is as simple as calling the `React.createElement(type,props,children)` function and passing it a set of arguments defining an actual DOM node (i.e. type = an html element e.g. `<li>` or custom element e.g. `<my-li>`).  
+Creating React nodes using JavaScript is as simple as calling the `React.createElement(type,props,children)` function and passing it a set of arguments defining an actual DOM node (i.e. type = an html element e.g. `<li>` or custom element e.g. `<my-li>`).
+
+The `React.createElement()` arguments are explained below:
+
+* *type (string | `React.createClass()`*): Can be a string which represents an HTML element (or custom HTML element) or React component instance (i.e. an instance of `React.createClass()`)
+* *props (null | object)*: Can be `null` or an object containing attributes/props and values
+* *children (null | string | `React.createClass()` | `React.createElement()`)*: Children cab be `null`, a string that gets turned into a text node, an instance of `React.createClass()` or `React.createElement()`.
 
 Below I use the `React.createElement()` function to create a virtual DOM representation of a `<li>` element node containing a text node of `one` (aka React text) and an `id` of `li1`.
 
