--- a/react-nodes/2.2.md
+++ b/react-nodes/2.2.md
@@ -6,9 +6,17 @@ Creating React nodes using JavaScript is as simple as calling the `React.createE
 
 The `React.createElement()` arguments are explained below:
 
-* *type (string | `React.createClass()`*): Can be a string which represents an HTML element (or custom HTML element) or React component instance (i.e. an instance of `React.createClass()`)
-* *props (null | object)*: Can be `null` or an object containing attributes/props and values
-* *children (null | string | `React.createClass()` | `React.createElement()`)*: Children cab be `null`, a string that gets turned into a text node, an instance of `React.createClass()` or `React.createElement()`.
+* <strong>type (string | `React.createClass()`):</strong>
+
+  Can be a string which represents an HTML element (or custom HTML element) or React component instance (i.e. an instance of `React.createClass()`)
+
+* <strong>props (null | object):</strong>
+
+  Can be `null` or an object containing attributes/props and values
+
+* <strong>children (null | string | `React.createClass()` | `React.createElement()`):</strong> 
+
+  Children cab be `null`, a string that gets turned into a text node, an instance of `React.createClass()` or `React.createElement()`
 
 Below I use the `React.createElement()` function to create a virtual DOM representation of a `<li>` element node containing a text node of `one` (aka React text) and an `id` of `li1`.
 
