--- a/react-nodes/2.2.md
+++ b/react-nodes/2.2.md
@@ -14,9 +14,9 @@ The `React.createElement()` arguments are explained below:
 
   Can be `null` or an object containing attributes/props and values
 
-* <strong>children (null | string | `React.createClass()` | `React.createElement()`):</strong> 
+* <strong>children (null | string | `React.createClass()` | `React.createElement()`):</strong>
 
-  Children cab be `null`, a string that gets turned into a text node, an instance of `React.createClass()` or `React.createElement()`
+  Children can be `null`, a string that gets turned into a text node, an instance of `React.createClass()` or `React.createElement()`
 
 Below I use the `React.createElement()` function to create a virtual DOM representation of a `<li>` element node containing a text node of `one` (aka React text) and an `id` of `li1`.
 
