--- a/react-jsx/3.6.md
+++ b/react-jsx/3.6.md
@@ -1,12 +1,12 @@
  # Using inline CSS in JSX
 
-In order to define inline styles on React nodes you need to pass the `style` prop/attribute a reference to a JavaScript object containing CSS properties and values.
+In order to define inline styles on React nodes you need to pass the `style` prop/attribute a JavaScript object or reference to an object containing CSS properties and values.
 
 In the code below I first setup a JavaScript object, named `styles`, containing inline styles. Then I use the `{ }` brackets to reference the object that should be used for the value of the style prop/attribute (e.g. `style={styles}`).
 
 [source code](https://jsfiddle.net/4pw9w9h7/#tabs=js,result,html,resources)
 
-Notice that, the CSS properties are in a camelCased form similar to what is used when writing [CSS in JavaScript](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Properties_Reference). This is required because JavaScript does not allow hyphens in names.
+Notice that, the CSS properties are in a camelCased form similar to what is used when writing [CSS properties in JavaScript](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Properties_Reference). This is required because JavaScript does not allow hyphens in names.
 
 When the above React/JSX code is transformed by Babel, and then parsed by a JavaScript engine, the resulting HTML will be:
 
