--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -1,1 +1,25 @@
 # Creating React Components
+
+A state-full React component can be created by calling the `React.createClass()` function. This function takes one argument object used to specify the details of the component. The available specification options are:
+
+* `render` - Function that returns React nodes, React Components, or null/false
+* `getInitialState` - Object containing initial value of `this.state`
+* `getDefaultProps` - Object containing values to be set on `this.props`
+* `propTypes` - Object containing [validation specifications for props](http://facebook.github.io/react/docs/reusable-components.html#prop-validation)
+* `mixins` - Array of mixins to share among components
+* `statics` - Object containing static mehtods
+* `displayName` - String, naming the component, used in debugging messages. If using JSX this is set automatically.
+* `componentWillMount` - Callback function invoked once immediately before the initial rendering occurs
+* `componentDidMount` - Callback function immediately after the initial rendering occurs
+* `componentWillReceiveProps` - Callback function invoked when a component is receiving new props
+* `shouldComponentUpdate` - Callback function invoked before rendering when new props or state are being received
+* `componentWillUpdate` - Callback function invoked immediately before rendering when new props or state are being received.
+* `componentDidUpdate` - Callback function invoked immediately after the component's updates are flushed to the DOM
+* `componentWillUnmount` - Callback function invoked immediately before a component is unmounted from the DOM
+
+An example of creating
+
+#### Notes
+
+* The render method can only return a single child React node.
+*
