--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -1,23 +1,49 @@
 # Creating React Components
 
-A state-full React component can be created by calling the `React.createClass()` function. This function takes one argument object used to specify the details of the component. The available specification options are:
+A React component that will potentially contain `state` and `props` can be created by calling the `React.createClass()` function. This function takes one argument object used to specify the details of the component. The available specification options are:
 
-* `render` - Function that returns React nodes, React Components, or null/false
-* `getInitialState` - Object containing initial value of `this.state`
-* `getDefaultProps` - Object containing values to be set on `this.props`
-* `propTypes` - Object containing [validation specifications for props](http://facebook.github.io/react/docs/reusable-components.html#prop-validation)
-* `mixins` - Array of mixins to share among components
-* `statics` - Object containing static mehtods
-* `displayName` - String, naming the component, used in debugging messages. If using JSX this is set automatically.
-* `componentWillMount` - Callback function invoked once immediately before the initial rendering occurs
-* `componentDidMount` - Callback function immediately after the initial rendering occurs
-* `componentWillReceiveProps` - Callback function invoked when a component is receiving new props
-* `shouldComponentUpdate` - Callback function invoked before rendering when new props or state are being received
-* `componentWillUpdate` - Callback function invoked immediately before rendering when new props or state are being received.
-* `componentDidUpdate` - Callback function invoked immediately after the component's updates are flushed to the DOM
-* `componentWillUnmount` - Callback function invoked immediately before a component is unmounted from the DOM
+* [`render`](http://facebook.github.io/react/docs/component-specs.html#render) - Function that returns React nodes, React Components, or null/false
+* [`getInitialState`](http://facebook.github.io/react/docs/component-specs.html#getinitialstate) - Object containing initial value of `this.state`
+* [`getDefaultProps`](http://facebook.github.io/react/docs/component-specs.html#getdefaultprops) - Object containing values to be set on `this.props`
+* [`propTypes`](http://facebook.github.io/react/docs/component-specs.html#proptypes) - Object containing [validation specifications for props](http://facebook.github.io/react/docs/reusable-components.html#prop-validation)
+* [`mixins`](http://facebook.github.io/react/docs/component-specs.html#mixins) - Array of mixins to share among components
+* [`statics`](http://facebook.github.io/react/docs/component-specs.html#statics) - Object containing static methods
+* [`displayName`](http://facebook.github.io/react/docs/component-specs.html#displayname) - String, naming the component, used in debugging messages. If using JSX this is set automatically.
+* [`componentWillMount`](http://facebook.github.io/react/docs/component-specs.html#displayname) - Callback function invoked once immediately before the initial rendering occurs
+* [`componentDidMount`](http://facebook.github.io/react/docs/component-specs.html#mounting-componentdidmount) - Callback function immediately after the initial rendering occurs
+* [`componentWillReceiveProps`](http://facebook.github.io/react/docs/component-specs.html#updating-componentwillreceiveprops) - Callback function invoked when a component is receiving new props
+* [`shouldComponentUpdate`](http://facebook.github.io/react/docs/component-specs.html#updating-shouldcomponentupdate) - Callback function invoked before rendering when new props or state are being received
+* [`componentWillUpdate`](http://facebook.github.io/react/docs/component-specs.html#updating-componentwillupdate) - Callback function invoked immediately before rendering when new props or state are being received.
+* [`componentDidUpdate`](http://facebook.github.io/react/docs/component-specs.html#updating-componentdidupdate) - Callback function invoked immediately after the component's updates are flushed to the DOM
+* [`componentWillUnmount`](http://facebook.github.io/react/docs/component-specs.html#unmounting-componentwillunmount) - Callback function invoked immediately before a component is unmounted from the DOM
 
-An example of creating
+An example of creating a React component with both state and props is shown below. test
+
+```
+var Timer = React.createClass({
+  getInitialState: function() {
+    return {secondsElapsed: Number(this.props.startTime) || 0};
+  },
+  tick: function() {
+    this.setState({secondsElapsed: this.state.secondsElapsed + 1});
+  },
+  componentDidMount: function() {
+    this.interval = setInterval(this.tick, 1000);
+  },
+  componentWillUnmount: function() {
+    clearInterval(this.interval);
+  },
+  render: function() {
+    return (
+      <div>Seconds Elapsed: {this.state.secondsElapsed}</div>
+    );
+  }
+});
+
+ReactDOM.render(<Timer startTime="60" />, app);
+```
+
+
 
 #### Notes
 
