--- a/basic-react-components/4.2.md
+++ b/basic-react-components/4.2.md
@@ -17,7 +17,7 @@ A React component that will potentially contain `state` and `props` can be creat
 * [`componentDidUpdate`](http://facebook.github.io/react/docs/component-specs.html#updating-componentdidupdate) - Callback function invoked immediately after the component's updates are flushed to the DOM
 * [`componentWillUnmount`](http://facebook.github.io/react/docs/component-specs.html#unmounting-componentwillunmount) - Callback function invoked immediately before a component is unmounted from the DOM
 
-An example of creating a React component with both state and props is shown below. test
+An example of creating a React component with both state and props is shown below.
 
 ```
 var Timer = React.createClass({
